update code temperature eval

--- a/mt.ipynb
+++ b/mt.ipynb
@@ -30,15 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv(\n",
-    "    \"data/Machine Translation - Luxembourguish_list - Machine Translation - Luxembourguish_list.csv\"\n",
-    ")\n",
+    "folder_name = \"data/\"\n",
+    "file_name = \"Machine Translation - Luxembourguish_list - Machine Translation - Luxembourguish_list.csv\"\n",
+    "sheet_name = \"\"\n",
+    "data = pd.read_csv(folder_name + file_name)\n",
+    "column_name = \"Sentence\"\n",
+    "batch_size = 1000\n",
     "\n",
     "language_map = {\n",
     "    \"de\": \"German\",\n",
@@ -71,37 +74,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
     "\n",
-    "texts = data[\"Sentence\"].to_list()\n",
+    "texts = data[column_name].astype(str).to_list()\n",
     "\n",
     "model_ckpt = \"papluca/xlm-roberta-base-language-detection\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_ckpt)\n",
     "\n",
-    "inputs = tokenizer(texts, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "all_preds = []\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    logits = model(**inputs).logits\n",
+    "for i in range(0, len(texts), batch_size):\n",
+    "    batch_texts = texts[i : i + batch_size]\n",
     "\n",
-    "preds = torch.softmax(logits, dim=-1)\n",
+    "    inputs = tokenizer(batch_texts, padding=True, truncation=True, return_tensors=\"pt\")\n",
     "\n",
-    "# Map raw predictions to languages"
+    "    with torch.no_grad():\n",
+    "        logits = model(**inputs).logits\n",
+    "\n",
+    "    preds = torch.softmax(logits, dim=-1)\n",
+    "    all_preds.append(preds)\n",
+    "\n",
+    "all_preds = torch.cat(all_preds, dim=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "id2lang = model.config.id2label\n",
-    "vals, idxs = torch.max(preds, dim=1)\n",
+    "vals, idxs = torch.max(all_preds, dim=1)\n",
     "labels = []\n",
     "pbs = []\n",
     "for idx, val in zip(idxs, vals):\n",
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,196 +145,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy_all_langid on all languages: 0.825\n",
-      "Accuracy_all_langid on luxembourgish: 0.35\n",
-      "Accuracy_all_roberta on all languages: 0.75\n",
-      "Accuracy_all_roberta on luxembourgish: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "correct = (data[\"true_flag\"] == data[\"label_langid\"]).sum()\n",
-    "total = len(data)\n",
-    "accuracy = correct / total\n",
-    "print(\"Accuracy_all_langid on all languages: \" + str(accuracy))\n",
-    "\n",
-    "\n",
-    "data_lux = data[data[\"Language\"] == \"Luxembourgish\"]\n",
-    "correct = (data_lux[\"true_flag\"] == data_lux[\"label_langid\"]).sum()\n",
-    "total = len(data_lux)\n",
-    "accuracy = correct / total\n",
-    "print(\"Accuracy_all_langid on luxembourgish: \" + str(accuracy))\n",
-    "\n",
-    "correct = (data[\"true_flag\"] == data[\"label_roberta\"]).sum()\n",
-    "total = len(data)\n",
-    "accuracy = correct / total\n",
-    "print(\"Accuracy_all_roberta on all languages: \" + str(accuracy))\n",
-    "\n",
-    "\n",
-    "data_lux = data[data[\"Language\"] == \"Luxembourgish\"]\n",
-    "correct = (data_lux[\"true_flag\"] == data_lux[\"label_roberta\"]).sum()\n",
-    "total = len(data_lux)\n",
-    "accuracy = correct / total\n",
-    "print(\"Accuracy_all_roberta on luxembourgish: \" + str(accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>true_flag</th>\n",
-       "      <th>correct_prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>de</td>\n",
-       "      <td>0.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>en</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>fr</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>lb</td>\n",
-       "      <td>0.35</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  true_flag  correct_prediction\n",
-       "0        de                0.95\n",
-       "1        en                1.00\n",
-       "2        fr                1.00\n",
-       "3        lb                0.35"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[\"correct_prediction\"] = (data[\"true_flag\"] == data[\"label_langid\"]).astype(int)\n",
-    "accuracy_df = data.groupby(\"true_flag\")[\"correct_prediction\"].mean().reset_index()\n",
-    "accuracy_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>true_flag</th>\n",
-       "      <th>correct_prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>de</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>en</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>fr</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>lb</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  true_flag  correct_prediction\n",
-       "0        de                 1.0\n",
-       "1        en                 1.0\n",
-       "2        fr                 1.0\n",
-       "3        lb                 0.0"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[\"correct_prediction\"] = (data[\"true_flag\"] == data[\"label_roberta\"]).astype(int)\n",
-    "accuracy_df = data.groupby(\"true_flag\")[\"correct_prediction\"].mean().reset_index()\n",
-    "accuracy_df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -341,9 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lujun/anaconda3/envs/causalLLM/lib/python3.9/site-packages/transformers/models/marian/tokenization_marian.py:197: UserWarning: Recommended: pip install sacremoses.\n",
+      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import MarianMTModel, MarianTokenizer\n",
     "\n",
@@ -354,20 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_texts = data[~data[\"label_roberta\"].isin([\"en\", \"fr\"])][\"Sentence\"].to_list()\n",
+    "input_texts = (\n",
+    "    data[~data[\"label_roberta\"].isin([\"en\", \"fr\"])][column_name].astype(str).to_list()\n",
+    ")\n",
     "indices = data[~data[\"label_roberta\"].isin([\"en\", \"fr\"])].index\n",
     "\n",
-    "inputs = tokenizer(input_texts, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "translated_texts = []\n",
     "\n",
-    "outputs = model.generate(**inputs, max_length=50, num_beams=4, early_stopping=True)\n",
+    "for i in range(0, len(input_texts), batch_size):\n",
+    "    batch_texts = input_texts[i : i + batch_size]\n",
+    "    batch_indices = indices[i : i + batch_size]\n",
     "\n",
-    "translated_texts = [\n",
-    "    tokenizer.decode(output, skip_special_tokens=True) for output in outputs\n",
-    "]\n",
+    "    inputs = tokenizer(batch_texts, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "    outputs = model.generate(**inputs, max_length=50, num_beams=4, early_stopping=True)\n",
+    "\n",
+    "    batch_translations = [\n",
+    "        tokenizer.decode(output, skip_special_tokens=True) for output in outputs\n",
+    "    ]\n",
+    "    translated_texts.extend(batch_translations)\n",
+    "\n",
     "\n",
     "translated_series = pd.Series(translated_texts, index=indices)\n",
     "data[\"translated_sentence\"] = None\n",
@@ -375,12 +212,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non commercial liscence"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"output.csv\", index=False)"
+    "# from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
+    "\n",
+    "# # Mistral Llama3\n",
+    "# model_name = \"facebook/nllb-200-distilled-1.3B\"\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "# model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
+    "\n",
+    "\n",
+    "# def batch_translate(\n",
+    "#     texts, source_lang=\"fra_Latn\", target_lang=\"eng_Latn\", batch_size=500\n",
+    "# ):\n",
+    "#     translations = []\n",
+    "#     for i in range(0, len(texts), batch_size):\n",
+    "#         batch_texts = texts[i : i + batch_size]\n",
+    "#         inputs = tokenizer(\n",
+    "#             batch_texts, return_tensors=\"pt\", padding=True, truncation=True\n",
+    "#         )\n",
+    "#         translated_tokens = model.generate(\n",
+    "#             **inputs, forced_bos_token_id=tokenizer.lang_code_to_id[target_lang]\n",
+    "#         )\n",
+    "#         translated_texts = tokenizer.batch_decode(\n",
+    "#             translated_tokens, skip_special_tokens=True\n",
+    "#         )\n",
+    "#         translations.extend(translated_texts)\n",
+    "#     return translations\n",
+    "\n",
+    "\n",
+    "# french_texts = (\n",
+    "#     data[data[\"translated_sentence\"].isna()][column_name].astype(str).to_list()\n",
+    "# )\n",
+    "# indices = data[data[\"translated_sentence\"].isna()].index\n",
+    "# english_translations = batch_translate(french_texts, batch_size=batch_size)\n",
+    "# translated_series = pd.Series(english_translations, index=indices)\n",
+    "# data.loc[translated_series.index, \"translated_sentence\"] = translated_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheet_name = \"\"\n",
+    "data.to_csv(f\"output_{file_name}_{sheet_name}.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "643820bc5efd4993bc846b7aa9da8752",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Some parameters are on the meta device device because they were offloaded to the disk and cpu.\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain import PromptTemplate\n",
+    "import transformers\n",
+    "import torch\n",
+    "\n",
+    "model_id = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+    "\n",
+    "pipeline = transformers.pipeline(\n",
+    "    \"text-generation\",\n",
+    "    model=model_id,\n",
+    "    model_kwargs={\"torch_dtype\": torch.bfloat16},\n",
+    "    device_map=\"auto\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "instruction = \"\"\"You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\"\"\"\n",
+    "question = \"hello, I am lujun\"\n",
+    "template = \"\"\"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "{instruction}\n",
+    "\n",
+    "<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
+    "{question}\n",
+    "\n",
+    "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt_template = PromptTemplate.from_template(template)\n",
+    "\n",
+    "prompt = prompt_template.format(instruction=instruction, question=question)\n",
+    "generated_text = pipeline(prompt, max_length=250)[0][\"generated_text\"]"
    ]
   }
  ],
