--- a/notebook/model_translation_pipeline.ipynb
+++ b/notebook/model_translation_pipeline.ipynb
@@ -228,11 +228,11 @@
    "source": [
     "prompt_template = \"\"\"Please translate the following {language_1} text into {language_2}. Please answer me with only translated text!\n",
     "\n",
-    "---- Text to be translated ---\n",
+    "---------------------------------- Text to be translated ----------------------------------\n",
     "\n",
     "{Text}\"\"\"\n",
     "\n",
-    "df_exploded[\"prompt\"] = df_exploded[\"text\"].apply( lambda text: prompt_template.format(language_1=\"Luxembourgish\", language_2=\"German\", Text=text))"
+    "df_exploded[\"prompt\"] = df_exploded[\"text\"].apply( lambda text: prompt_template.format(language_1=\"Luxembourgish\", language_2=\"English\", Text=text))"
    ]
   },
   {
