--- a/notebook/model_inference.ipynb
+++ b/notebook/model_inference.ipynb
@@ -748,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mt_lux_env",
+   "display_name": "mt_luxembourgish_env",
    "language": "python",
    "name": "python3"
   },
@@ -762,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
