--- a/fine-tuning-llama3-MT.ipynb
+++ b/fine-tuning-llama3-MT.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -36,8 +36,8 @@
       "Requirement already satisfied: peft in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (0.13.2)\n",
       "Requirement already satisfied: nltk in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (3.9.1)\n",
       "Requirement already satisfied: seaborn in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (0.13.2)\n",
-      "Collecting trl\n",
-      "  Downloading trl-0.12.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: trl in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (0.12.1)\n",
+      "Requirement already satisfied: sacrebleu in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (2.4.3)\n",
       "Requirement already satisfied: filelock in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from torch) (3.16.1)\n",
       "Requirement already satisfied: typing-extensions>=4.8.0 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from torch) (4.12.2)\n",
       "Requirement already satisfied: networkx in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from torch) (3.4.2)\n",
@@ -88,6 +88,10 @@
       "Requirement already satisfied: click in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from nltk) (8.1.7)\n",
       "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from seaborn) (3.9.2)\n",
       "Requirement already satisfied: rich in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from trl) (13.9.4)\n",
+      "Requirement already satisfied: portalocker in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from sacrebleu) (3.0.0)\n",
+      "Requirement already satisfied: tabulate>=0.8.9 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from sacrebleu) (0.9.0)\n",
+      "Requirement already satisfied: colorama in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from sacrebleu) (0.4.6)\n",
+      "Requirement already satisfied: lxml in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from sacrebleu) (5.3.0)\n",
       "Requirement already satisfied: pyarrow>=15.0.0 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from datasets>=2.0.0->evaluate) (18.1.0)\n",
       "Requirement already satisfied: aiohttp in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from datasets>=2.0.0->evaluate) (3.10.11)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.1)\n",
@@ -115,20 +119,17 @@
       "Requirement already satisfied: async-timeout<6.0,>=4.0 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (4.0.3)\n",
       "Requirement already satisfied: mdurl~=0.1 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->trl) (0.1.2)\n",
       "Requirement already satisfied: propcache>=0.2.0 in /home/lujun_li/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages (from yarl<2.0,>=1.12.0->aiohttp->datasets>=2.0.0->evaluate) (0.2.0)\n",
-      "Downloading trl-0.12.1-py3-none-any.whl (310 kB)\n",
-      "Installing collected packages: trl\n",
-      "Successfully installed trl-0.12.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install torch tensorboard evaluate scikit-learn transformers peft nltk seaborn trl"
+    "%pip install torch tensorboard evaluate scikit-learn transformers peft nltk seaborn trl sacrebleu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -148,16 +149,10 @@
    ],
    "source": [
     "from huggingface_hub import login\n",
-    "import os\n",
     "import time\n",
     "import pandas as pd\n",
-    "import torch.cuda\n",
     "import torch\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "import os\n",
-    "import random\n",
-    "import functools\n",
-    "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch.nn.functional as F\n",
@@ -173,12 +168,8 @@
     "from peft import LoraConfig, prepare_model_for_kbit_training, get_peft_model\n",
     "\n",
     "from transformers import (\n",
-    "    AutoModelForSequenceClassification,\n",
     "    AutoTokenizer,\n",
     "    BitsAndBytesConfig,\n",
-    "    TrainingArguments,\n",
-    "    Trainer,\n",
-    "    DataCollatorWithPadding\n",
     ")"
    ]
   },
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,16 +191,16 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['sentence_ltz_Latn', 'sentence_eng_Latn'],\n",
-       "        num_rows: 1000\n",
+       "        num_rows: 5\n",
        "    })\n",
        "    val: Dataset({\n",
        "        features: ['sentence_eng_Latn', 'sentence_ltz_Latn'],\n",
-       "        num_rows: 1012\n",
+       "        num_rows: 5\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,15 +220,16 @@
     "num_train_epochs = 5\n",
     "weight_decay = 0.01\n",
     "MAX_LEN = 512\n",
+    "sample_size_training = 5\n",
     "\n",
     "# Load validation and training datasets\n",
     "model_name = \"/home/lujun_li/projects/base_models/Llama-3.2-1B-Instruct\"\n",
     "\n",
-    "val_dataset = load_from_disk(\"/home/lujun_li/projects/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\")\n",
+    "val_dataset = load_from_disk(\"/home/lujun_li/projects/mt_luxembourgish/data/fake_targets/flores_devtest_arrow\").select([i for i in range(sample_size_training)])\n",
     "train_dataset = load_from_disk(\"/home/lujun_li/projects/mt_luxembourgish/data/fake_targets/NC_LUX.arrow\").select_columns([\"subsentence\", \"translated_text\"]).rename_columns({\n",
     "    \"subsentence\": \"sentence_ltz_Latn\",  # Renaming 'subsentence' to 'sentence_eng_Latn'\n",
     "    \"translated_text\": \"sentence_eng_Latn\"  # Renaming 'translated_text' to 'sentence_ltz_Latn'\n",
-    "}).select([i for i in range(1000)])\n",
+    "}).select([i for i in range(sample_size_training)])\n",
     "\n",
     "# Convert datasets to dictionaries\n",
     "dataset = DatasetDict({ 'train': train_dataset, 'val': val_dataset})\n",
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "gather": {
      "logged": 1720054183577
@@ -264,7 +256,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "# Quantization\n",
     "quantization_config = BitsAndBytesConfig(\n",
     "    load_in_4bit = True, # enable 4-bit quantization\n",
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -392,12 +383,12 @@
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_name, add_prefix_space=True)\n",
     "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n"
+    "tokenizer.pad_token = tokenizer.eos_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1720058048519
@@ -441,6 +432,13 @@
     "from accelerate import Accelerator\n",
     "from transformers import DataCollatorWithPadding, TrainingArguments\n",
     "from trl import SFTTrainer\n",
+    "from sacrebleu.metrics import BLEU\n",
+    "\n",
+    "\n",
+    "bleu = BLEU(tokenize=\"flores200\", effective_order=True)\n",
+    "\n",
+    "def calculate_sp_bleu(hypothesis, reference):\n",
+    "    return bleu.sentence_score(hypothesis, [reference]).score\n",
     "\n",
     "def train_ddp_accelerate():\n",
     "    \n",
@@ -457,6 +455,7 @@
     "            # Initialize TensorBoard writer\n",
     "            log_dir = kwargs.get('args').output_dir  # Use the training output directory\n",
     "            self.writer = writer\n",
+    "            \n",
     "\n",
     "        def log(self, logs):\n",
     "            \"\"\"\n",
@@ -468,10 +467,7 @@
     "                    if isinstance(value, (int, float)):\n",
     "                        self.writer.add_scalar(key, value, self.state.global_step)\n",
     "\n",
-    "    \n",
-    "    # Define the data collator\n",
-    "    collate_fn = DataCollatorWithPadding(tokenizer=tokenizer)\n",
-    "\n",
+    "        \n",
     "    # Define training arguments\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=f\"logs/fit_{current}\",\n",
@@ -481,6 +477,7 @@
     "        num_train_epochs=num_train_epochs,\n",
     "        weight_decay=weight_decay,\n",
     "        evaluation_strategy='epoch',\n",
+    "        logging_strategy='epoch',\n",
     "        save_strategy='epoch',\n",
     "        load_best_model_at_end=True,\n",
     "        report_to=\"tensorboard\",\n",
@@ -489,6 +486,19 @@
     "        warmup_steps=10\n",
     "    )\n",
     "\n",
+    "    def compute_metrics(eval_pred):\n",
+    "        logits, labels = eval_pred\n",
+    "        pred_ids = logits.argmax(axis=-1)\n",
+    "        pred_texts = tokenizer.batch_decode(pred_ids, skip_special_tokens=True)\n",
+    "        label_texts = tokenizer.batch_decode(labels, skip_special_tokens=True)\n",
+    "\n",
+    "        bleu_scores = [bleu.sentence_score(hypothesis=pred, references=[ref]).score \n",
+    "                    for pred, ref in zip(pred_texts, label_texts)]\n",
+    "\n",
+    "        avg_bleu = sum(bleu_scores) / len(bleu_scores)\n",
+    "        return {\"bleu\": avg_bleu}\n",
+    "    \n",
+    "\n",
     "    # Define the trainer\n",
     "    trainer = CustomSFTTrainer(\n",
     "        model=model,\n",
@@ -496,8 +506,9 @@
     "        train_dataset=tokenized_datasets['train'],\n",
     "        eval_dataset=tokenized_datasets['val'],\n",
     "        tokenizer=tokenizer,\n",
-    "        data_collator=collate_fn,\n",
+    "        data_collator=DataCollatorWithPadding(tokenizer=tokenizer),\n",
     "        peft_config=lora_config,\n",
+    "        compute_metrics=compute_metrics\n",
     "    )\n",
     "\n",
     "    # Start training\n",
@@ -519,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -557,8 +568,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2' max='5000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [   2/5000 : < :, Epoch 0.00/5]\n",
+       "      <progress value='7' max='25' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 7/25 02:40 < 09:37, 0.03 it/s, Epoch 1.20/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -566,9 +577,16 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Bleu</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>9.514058</td>\n",
+       "      <td>0.398920</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -578,21 +596,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maccelerate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m notebook_launcher\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Call the function using notebook_launcher\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mnotebook_launcher\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_ddp_accelerate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_processes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n\u001b[1;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages/accelerate/launchers.py:266\u001b[0m, in \u001b[0;36mnotebook_launcher\u001b[0;34m(function, args, num_processes, mixed_precision, use_port, master_addr, node_rank, num_nodes, rdzv_backend, rdzv_endpoint, rdzv_conf, rdzv_id, max_restarts, monitor_interval, log_line_prefix_template)\u001b[0m\n\u001b[1;32m    264\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    265\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLaunching training on CPU.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 266\u001b[0m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[6], line 64\u001b[0m, in \u001b[0;36mtrain_ddp_accelerate\u001b[0;34m()\u001b[0m\n\u001b[1;32m     53\u001b[0m trainer \u001b[38;5;241m=\u001b[39m CustomSFTTrainer(\n\u001b[1;32m     54\u001b[0m     model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[1;32m     55\u001b[0m     args\u001b[38;5;241m=\u001b[39mtraining_args,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     60\u001b[0m     peft_config\u001b[38;5;241m=\u001b[39mlora_config,\n\u001b[1;32m     61\u001b[0m )\n\u001b[1;32m     63\u001b[0m \u001b[38;5;66;03m# Start training\u001b[39;00m\n\u001b[0;32m---> 64\u001b[0m train_result \u001b[38;5;241m=\u001b[39m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;66;03m# Close the writer\u001b[39;00m\n\u001b[1;32m     67\u001b[0m writer\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages/transformers/trainer.py:2123\u001b[0m, in \u001b[0;36mTrainer.train\u001b[0;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[1;32m   2121\u001b[0m         hf_hub_utils\u001b[38;5;241m.\u001b[39menable_progress_bars()\n\u001b[1;32m   2122\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 2123\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2124\u001b[0m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2125\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2126\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2127\u001b[0m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2128\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/mt_luxembourgish_env/lib/python3.10/site-packages/transformers/trainer.py:2486\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[0;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[1;32m   2480\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m context():\n\u001b[1;32m   2481\u001b[0m     tr_loss_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtraining_step(model, inputs, num_items_in_batch)\n\u001b[1;32m   2483\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   2484\u001b[0m     args\u001b[38;5;241m.\u001b[39mlogging_nan_inf_filter\n\u001b[1;32m   2485\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_xla_available()\n\u001b[0;32m-> 2486\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39misnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misinf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_loss_step\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m   2487\u001b[0m ):\n\u001b[1;32m   2488\u001b[0m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[1;32m   2489\u001b[0m     tr_loss \u001b[38;5;241m=\u001b[39m tr_loss \u001b[38;5;241m+\u001b[39m tr_loss \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_globalstep_last_logged)\n\u001b[1;32m   2490\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -605,6 +608,13 @@
     "    num_processes=1\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
